# Wall-Haven-Desktop

./: CMakeLists.txt  PKGBUILD  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: no-icon.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
